logstream-final/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logstream
  labels:
    app.kubernetes.io/name: logstream
    app.kubernetes.io/part-of: logstream
